tests/internal/negative_case/bad_flow_case_in_if.c
int f(int x) {
  if (x) {
    case 1:
      return 1;
  }
  return 0;
}
